fix gap

--- a/packages/styles/framework/src/components/_stack.scss
+++ b/packages/styles/framework/src/components/_stack.scss
@@ -1,4 +1,4 @@
-$gap: 4px,8px,12px,16px,24px,32px;
+$gap: 4px,8px,12px,16px,24px,32px,40px,48px,54px,62px;
 
 .stack {
     display: flex;
@@ -11,11 +11,33 @@ $gap: 4px,8px,12px,16px,24px,32px;
         flex-direction: row;
     }
 
+
+
     @for $i from 1 through length($gap) {
-    $item: nth($gap, $i);
-      &.has-gap-#{$i} {
+      $item: nth($gap, $i);
+      &.has-gap-#{$i}{
         gap: $item;
       }
-  }
+
+      @include mobile {
+        &.has-gap-mobile-#{$i} {
+          gap: $item;
+        }
+      }
+
+      @include tablet {
+        &.has-gap-tablet-#{$i} {
+          gap: $item;
+        }
+      }
+
+      @include desktop {
+        &.has-gap-desktop-#{$i} {
+          gap: $item;
+        }
+      }
+    }
+
+    
 
 }
